<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ocallaghan_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="romnat.tpmap.OcallaghanDescriptionActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pub"
        android:scaleType="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/to_screen_border_min_spacing"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/bieres"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bar_phone_number"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/to_screen_border_min_spacing"
            android:text="@string/bar_address"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_below="@id/imageView"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/jours_list" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/horaires" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/to_screen_border_min_spacing"
            android:background="#222522"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:text="@string/btn_website"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:onClick="link"
            />


    </LinearLayout>
</FrameLayout>
